--- a/app/index.html
+++ b/app/index.html
@@ -87,8 +87,8 @@
                 <li data-ng-class="{ active: $state.includes('charts') }">
                     <a angular-ripple="" ui-sref="charts"><i class="glyphicon glyphicon-stats"></i> Charts</a>
                 </li>
-                <li ng-class="{ active: $state.includes('demos.translation') }">
-                    <a angular-ripple="" ui-sref="demos.translation"><i class="glyphicon glyphicon-blackboard"></i> Demos</a>
+                <li ng-class="{ active: $state.includes('demos.rest') }">
+                    <a angular-ripple="" ui-sref="demos.rest"><i class="glyphicon glyphicon-blackboard"></i> Demos</a>
                 </li>
                 <li data-ng-class="{ active: $state.includes('about') }">
                     <a angular-ripple="" ui-sref="about"><i class="glyphicon glyphicon-info-sign"></i> About</a>
@@ -174,6 +174,8 @@
     <script src="bower_components/appverse-web-html5-security/dist/appverse-html5-security.min.js"></script>
 
     <!-- endbuild -->
+
+    <script src="scripts/controllers/rest-controller-code.js"></script>
 </body>
 
 </html>
