--- a/app/index.html
+++ b/app/index.html
@@ -134,6 +134,7 @@
     <script src="scripts/controllers/charts-controller.js"></script>
     <script src="scripts/controllers/detection-controller.js"></script>
     <script src="scripts/controllers/performance-controllers.js"></script>
+    <script src="scripts/controllers/webworkers-controller-code.js"></script>
     <script src="scripts/controllers/translation-controllers.js"></script>
     <script src="scripts/states/app-states.js"></script>
 
