--- a/app/index.html
+++ b/app/index.html
@@ -19,12 +19,12 @@
 
     <!-- build:css styles/vendor.css -->
     <link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.css">
-    <link rel="stylesheet" type="text/css" href="bower_components/ng-grid/ng-grid.min.css">
-    <link rel="stylesheet" type="text/css" href="bower_components/angular-ui-select/dist/select.min.css">
-    <link rel="stylesheet" type="text/css" href="bower_components/angularjs-slider/dist/rzslider.min.css">
-    <link rel="stylesheet" type="text/css" href="bower_components/selectize/dist/css/selectize.css">
-    <link rel="stylesheet" type="text/css" href="bower_components/angular-chart.js/dist/angular-chart.css">
-    <link rel="stylesheet" type="text/css" href="bower_components/highlightjs/styles/github.css">
+    <link rel="stylesheet" href="bower_components/ng-grid/ng-grid.min.css">
+    <link rel="stylesheet" href="bower_components/angular-ui-select/dist/select.min.css">
+    <link rel="stylesheet" href="bower_components/angularjs-slider/dist/rzslider.min.css">
+    <link rel="stylesheet" href="bower_components/selectize/dist/css/selectize.css">
+    <link rel="stylesheet" href="bower_components/angular-chart.js/dist/angular-chart.css">
+    <link rel="stylesheet" href="bower_components/highlightjs/styles/github.css">
     <!-- endbuild -->
 
     <!-- build:css(.tmp) styles/styles.css -->
@@ -110,9 +110,8 @@
     <script src="bower_components/bootstrap-sass/assets/javascripts/bootstrap/collapse.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="bower_components/ng-grid/build/ng-grid.min.js"></script>
-    <script src="bower_components/venturocket-angular-slider/build/angular-slider.min.js"></script>
     <script src="bower_components/angular-animate/angular-animate.min.js"></script>
-    <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
+    <script src="bower_components/angular-xeditable/dist/js/xeditable.min.js"></script>
     <script src="bower_components/appverse-web-html5-core/dist/appverse/appverse.min.js"></script>
     <script src="bower_components/appverse-web-html5-core/dist/appverse-router/appverse-router.min.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
@@ -126,17 +125,16 @@
     <script src="bower_components/angular-chart.js/dist/angular-chart.min.js"></script>
     <script src="bower_components/highlightjs/highlight.pack.js"></script>
     <script src="bower_components/angular-highlightjs/angular-highlightjs.min.js"></script>
+    <script src="bower_components/qrcode/lib/qrcode.min.js"></script>
+    <script src="bower_components/angular-qr/angular-qr.min.js"></script>
     <script src="scripts/app.js"></script>
 
     <script src="scripts/controllers/home-controller.js"></script>
     <script src="scripts/controllers/uibootstrap-controller.js"></script>
     <script src="scripts/controllers/uiselect-controller.js"></script>
-    <script src="scripts/controllers/modal-controller.js"></script>
+    <script src="scripts/controllers/uicomponents-controller.js"></script>
     <script src="scripts/controllers/charts-controller.js"></script>
-    <script src="scripts/controllers/detection-controller-code.js"></script>
     <script src="scripts/controllers/performance-controllers.js"></script>
-    <script src="scripts/controllers/webworkers-controller-code.js"></script>
-    <script src="scripts/controllers/translation-controller-code.js"></script>
     <script src="scripts/states/app-states.js"></script>
 
     <!-- PERFORMANCE MODULE -->
@@ -175,6 +173,9 @@
     <!-- endbuild -->
 
     <script src="scripts/controllers/rest-controller-code.js"></script>
+    <script src="scripts/controllers/detection-controller-code.js"></script>
+    <script src="scripts/controllers/webworkers-controller-code.js"></script>
+    <script src="scripts/controllers/translation-controller-code.js"></script>
 </body>
 
 </html>
