--- a/app/index.html
+++ b/app/index.html
@@ -164,6 +164,9 @@
     <script src="bower_components/restangular/dist/restangular.min.js"></script>
     <script src="bower_components/appverse-web-html5-core/dist/appverse-rest/appverse-rest.js"></script>
 
+    <!-- IONIC MODULE -->
+    <script src="bower_components/appverse-web-html5-core/dist/appverse-ionic/appverse-ionic.min.js"></script>
+
     <!-- LOGGING MODULE -->
     <script src="bower_components/appverse-web-html5-core/dist/appverse-logging/appverse-logging.js"></script>
 
