--- a/app/index.html
+++ b/app/index.html
@@ -129,6 +129,7 @@
     <script src="bower_components/qrcode/lib/qrcode.min.js"></script>
     <script src="bower_components/angular-qr/angular-qr.min.js"></script>
     <script src="bower_components/IndexedDBShim/dist/indexeddbshim.min.js"></script>
+    <script src="bower_components/ng-webworker/src/ng-webworker.min.js"></script>
 
     <script src="scripts/app.js"></script>
 
